# x11-mcp-voice

./: .gitignore  README.md  config.example.yaml  install.sh  pyproject.toml
models/: hey_nox.onnx
scripts/: record-wake-word.py  render-icons.py  train-wake-word-v2.py  train-wake-word.py
src/x11_mcp_voice/: __main__.py  agent.py  chat.py  config.py  daemon.py  media_control.py  onboard.py  speaker.py  state.py  system_context.py  transcriber.py  transcript.py  tray.py  wake_word.py
systemd/: nox-chat.desktop.in  nox-daemon.service  nox-tray.service
tests/: conftest.py  test_agent.py  test_chat.py  test_clean_speech.py  test_config.py  test_daemon.py  test_media_control.py  test_onboard.py  test_speaker.py  test_state.py  test_transcriber.py  test_transcript.py  test_tray.py  test_wake_word.py
